# boids

./: .gitignore  Cargo.toml
src/: boid.rs  main.rs  spatial_grid.rs
