[package]
name = "boids"
version = "0.1.0"
authors = ["eisendaniel <danieleisen99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7.0"
glam = "0.20.2"
rand = "0.8.5"
rayon = "1.8.0"  # Added for parallel processing

[profile.release]
debug = false
lto = true        # Link Time Optimization
codegen-units = 1 # Optimize across entire codebase
opt-level = 3     # Maximum optimizations
panic = "abort"   # Remove panic unwinding code
